Fixed footer menu on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -90,8 +90,8 @@ nav {
 	padding: 10px;
 }
 
-.nav-right {
-	display: none;	
+.nav-main {
+	display: none;
 }
 
 .nav-item {
@@ -422,8 +422,7 @@ padding: 0px 18px;
 footer {
 	padding-right: 5em;
 	padding-top: 1em;
-	display: flex;
-	justify-content: flex-end;
+
 	color: #fff;
 	background: #252525;
 
@@ -446,8 +445,9 @@ footer a:hover {
 
 .footer-nav-item  {
 	padding: 10px;
+	margin: 10px 0;
 	border: 1px solid #fff;
-	border-right: none; /*To prevent overlap between borders*/
+	
 }
 
 .footer-nav-link {
@@ -455,7 +455,7 @@ footer a:hover {
 }
 
 	.footer-nav-end {
-		border-right: 1px solid #fff;
+		
 	}
 
 	 /* ============================ Basic hamburger menu using CSS ============================ */
@@ -556,6 +556,7 @@ footer a:hover {
 			overflow: auto;
 			z-index: 99;
 				}
+
 		.mobile-nav {
 			list-style-type: none;
 
@@ -573,7 +574,7 @@ footer a:hover {
 			}
 
 			.nav-main {
-				opacity: 0;
+				
 				visibility: hidden;
 			}
 
